# CVN-1

./: .gitignore  CVN-1-spec.md  DEVELOPMENT_PLAN.md  LICENSE  README.md  ROYALTY_SPLIT_AUTOMATION_PLAN.md  demo-revamp-plan.md  nfts.txt  royalty-upgrade.md  version3-plan.md
contracts/cvn1_vault/: Move.toml
contracts/cvn1_vault/sources/: collection.move  fee_splitter.move  minting.move  royalties.move  vault_core.move  vault_events.move  vault_ops.move  vault_views.move  vaulted_collection.move
contracts/cvn1_vault/sources/tests/: collection_tests.move  fee_splitter_tests.move  minting_tests.move  royalties_tests.move  royalty_sweep_tests.move  vault_core_tests.move  vault_ops_tests.move  vault_views_tests.move
demo/: README.md
demo/backend/: Cargo.toml
demo/backend/src/: main.rs  routes.rs
demo/frontend/: package-lock.json  package.json
demo/frontend/src/app/: layout.tsx  page.tsx
demo/frontend/src/components/: ConnectButton.tsx  StrategyCard.tsx  (+4 more)
docs/: CVN1-SPEC.md  DEPLOYMENT.md  GAS_BENCHMARKS.md  MARKETPLACE-GUIDE.md  SECURITY.md  TYPESCRIPT-INTEGRATION.md  USE_CASES.md  V3-CHANGELOG.md  V4-CHANGELOG.md  V5-CHANGELOG.md  V6-CHANGELOG.md  VERSION4_UPGRADE.md  use-cases.md  v2-improvements.md
royalty_sweeper/: Cargo.toml  README.md
royalty_sweeper/src/: main.rs
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: client.rs  lib.rs  types.rs  utils.rs
sdk/rust/tests/: integration.rs
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: CVN1Client.ts  index.ts  types.ts  utils.ts
sdk/typescript/tests/: client.test.ts  utils.test.ts
(+5 files in other folders)
