[package]
name = "cvn1-sdk"
version = "1.0.0"
edition = "2021"
authors = ["Singularity Shift Ltd"]
description = "Rust SDK for CVN-1 Vaulted NFT Standard on Cedra"
license = "Proprietary"

[dependencies]
cedra-sdk = { git = "https://github.com/cedra-labs/cedra-network", branch = "testnet" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
reqwest = { version = "0.11", features = ["json"] }

[patch.crates-io]
merlin = { git = "https://github.com/cedra-labs/merlin" }

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic"
path = "examples/basic.rs"
